--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="flex">
         <div>
             <h1>Hello World</h1>
+            <h2>Second Commit</h2>
         </div>    
         <div>
             <img src="penguin.png" alt="image-penguin"></img>
