--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="flex">
         <div>
-            <h1>Hello World</h1>
+            <h1>Hello World. Second branch</h1>
             <h2>Second Commit</h2>
         </div>    
         <div>
