--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h2>Hello World. Second branch</h2>
             <h2>Hello World. Third branch</h2>
             <p>Merge Second and Third. Push to Remote Branch</p>
-            <p>reset</p>
+            <p>git reflog test</p>
         </div>    
         <div>
             <img src="penguin.png" alt="image-penguin"></img>
